--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.2.1",
-    "caniuse-lite": "^1.0.30001521",
     "emailjs": "^4.0.2",
     "g": "^2.0.1",
     "gh-pages": "^3.2.3",
@@ -54,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
